edited the validator and books model
