# routes/book.route.js
@@ -8,7 +8,7 @@ const validateRequest = require("../middlewares/validateRequests");
 
 router.post("/add", addBookValidator, validateRequest, async (req, res) => {
   try {
-    const { title, author, isbn, availableCopies } = req.body;
+    const { title, author, isbn, copiesInStock, price } = req.body;
 
     const existingBook = await Book.findOne({ isbn });
     if (existingBook) {
@@ -22,7 +22,8 @@ router.post("/add", addBookValidator, validateRequest, async (req, res) => {
       title,
       author,
       isbn,
-      availableCopies: Number(availableCopies),
+      price: Number(price),
+      copiesInStock: Number(copiesInStock),
     });
 
     await book.save();
@@ -37,6 +38,21 @@ router.post("/add", addBookValidator, validateRequest, async (req, res) => {
       status: false,
       message: "Failed to add book: " + err.message,
     });
+  }
+});
+
+router.get("/all", async (req, res) => {
+  try {
+    const books = await Book.find({});
+    if (books.length === 0) {
+      return res
+        .status(404)
+        .json({ status: false, message: "No books found." });
+    }
+    res.status(200).json(books);
+  } catch (error) {
+    console.error("Error fetching books:", error);
+    res.status(500).json({ message: "Server error while fetching books." });
   }
 });
 
